--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
     "mocha": "mocha test/ --recursive",
+    "dev": "nodemon --inspect src/",
     "seed": "node src/seeds.js"
   },
   "dependencies": {
