--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint": "^4.3.0",
     "feathers-authentication-client": "^0.3.3",
     "mocha": "^3.4.2",
+    "nodemon": "^1.12.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "superagent": "^3.6.2"
